force-app/main/default/objects/Facility_Outcome__c/Facility_Outcome__c.object-meta.xml
<CustomObject>
    <label>Facility/Outcome</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>F/O #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facilities/Outcomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>