force-app/main/default/objects/Facility_Outcome__c/fields/Euthanasia_Reason__c.field-meta.xml
<CustomField>
    <fullName>Euthanasia_Reason__c</fullName>
    <label>Euthanasia Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>