force-app/main/default/objects/Facility_Outcome__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Facilities/Outcomes</relationshipLabel>
    <relationshipName>Facilities_Outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>