force-app/main/default/objects/Facility_Outcome__c/fields/Facility_or_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Facility_or_Outcome__c</fullName>
    <label>Facility or Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facility</fullName>
            </value>
            <value>
                <fullName>Outcome</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>