force-app/main/default/objects/Facility_Outcome__c/fields/Facility_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Facility_Outcome__c</fullName>
    <label>Facility/Outcome</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Facility_or_Outcome__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AAH</fullName>
            </value>
            <value>
                <fullName>Adopted</fullName>
            </value>
            <value>
                <fullName>Adoption Center</fullName>
            </value>
            <value>
                <fullName>Adoption Center (Temp Boarding)</fullName>
            </value>
            <value>
                <fullName>Animal Hospital</fullName>
            </value>
            <value>
                <fullName>Animal Shelter</fullName>
            </value>
            <value>
                <fullName>ARC</fullName>
            </value>
            <value>
                <fullName>ASNA</fullName>
            </value>
            <value>
                <fullName>ASPCA Shelter</fullName>
            </value>
            <value>
                <fullName>Board and Train</fullName>
            </value>
            <value>
                <fullName>Boarding</fullName>
            </value>
            <value>
                <fullName>BRC</fullName>
            </value>
            <value>
                <fullName>Bronx CVC</fullName>
            </value>
            <value>
                <fullName>Brooklyn CVC</fullName>
            </value>
            <value>
                <fullName>CARE</fullName>
            </value>
            <value>
                <fullName>Clinic</fullName>
            </value>
            <value>
                <fullName>Community Medicine</fullName>
            </value>
            <value>
                <fullName>CRC</fullName>
            </value>
            <value>
                <fullName>CRC-MRC</fullName>
            </value>
            <value>
                <fullName>Cremation</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Euthanized</fullName>
            </value>
            <value>
                <fullName>Field Temp Shelter</fullName>
            </value>
            <value>
                <fullName>Foster-Based Rescue</fullName>
            </value>
            <value>
                <fullName>Foster Home</fullName>
            </value>
            <value>
                <fullName>Foster Home - Adoption Center</fullName>
            </value>
            <value>
                <fullName>Foster Home - ARC</fullName>
            </value>
            <value>
                <fullName>Foster Home - CARE</fullName>
            </value>
            <value>
                <fullName>Hound Hotel</fullName>
            </value>
            <value>
                <fullName>Kitten Nursery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>