force-app/main/default/objects/Facility_Outcome__c/fields/Follow_Up_Days__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Days__c</fullName>
    <inlineHelpText>If left blank the default follow up schedule will apply</inlineHelpText>
    <label>Follow Up Days</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Scheduling_Days</valueSetName>
    </valueSet>
</CustomField>