force-app/main/default/objects/Facility_Outcome__c/fields/Follow_Up_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Frequency__c</fullName>
    <label>Follow Up Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Every Other Week</fullName>
            </value>
            <value>
                <fullName>Every Three Weeks</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Every Other Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>