force-app/main/default/objects/Facility_Outcome__c/fields/HLE_Civicore_ID__c.field-meta.xml
<CustomField>
    <fullName>HLE_Civicore_ID__c</fullName>
    <label>HLE Civicore ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>