force-app/main/default/objects/Facility_Outcome__c/fields/Kennel_Location__c.field-meta.xml
<CustomField>
    <fullName>Kennel_Location__c</fullName>
    <label>Kennel Location</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Facility_Outcome__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Habitat</fullName>
            </value>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>A2</fullName>
            </value>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>C1</fullName>
            </value>
            <value>
                <fullName>C2</fullName>
            </value>
            <value>
                <fullName>C3</fullName>
            </value>
            <value>
                <fullName>D1</fullName>
            </value>
            <value>
                <fullName>D2</fullName>
            </value>
            <value>
                <fullName>D3</fullName>
            </value>
            <value>
                <fullName>D4</fullName>
            </value>
            <value>
                <fullName>E1</fullName>
            </value>
            <value>
                <fullName>E2</fullName>
            </value>
            <value>
                <fullName>F1</fullName>
            </value>
            <value>
                <fullName>F2</fullName>
            </value>
            <value>
                <fullName>F3</fullName>
            </value>
            <value>
                <fullName>G1</fullName>
            </value>
            <value>
                <fullName>G2</fullName>
            </value>
            <value>
                <fullName>G3</fullName>
            </value>
            <value>
                <fullName>G4</fullName>
            </value>
            <value>
                <fullName>G5</fullName>
            </value>
            <value>
                <fullName>VA1</fullName>
            </value>
            <value>
                <fullName>VA2</fullName>
            </value>
            <value>
                <fullName>VA3</fullName>
            </value>
            <value>
                <fullName>VA4</fullName>
            </value>
            <value>
                <fullName>VA5</fullName>
            </value>
            <value>
                <fullName>VA6</fullName>
            </value>
            <value>
                <fullName>VA7</fullName>
            </value>
            <value>
                <fullName>VB1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>