force-app/main/default/objects/Facility_Outcome__c/fields/Kennel_Location_Text__c.field-meta.xml
<CustomField>
    <fullName>Kennel_Location_Text__c</fullName>
    <label>Kennel Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>