force-app/main/default/objects/Facility_Outcome__c/fields/Location_Duration__c.field-meta.xml
<CustomField>
    <fullName>Location_Duration__c</fullName>
    <formula>End_Date__c - Start_Date__c</formula>
    <label>Location Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>