force-app/main/default/objects/Facility_Outcome__c/fields/Lost_Address__c.field-meta.xml
<CustomField>
    <fullName>Lost_Address__c</fullName>
    <label>Lost Address</label>
    <type>TextArea</type>
</CustomField>