force-app/main/default/objects/Facility_Outcome__c/fields/Modify_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Modify_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modify Schedule</label>
    <type>Checkbox</type>
</CustomField>