force-app/main/default/objects/Facility_Outcome__c/fields/NYPD_Freezer_Location__c.field-meta.xml
<CustomField>
    <fullName>NYPD_Freezer_Location__c</fullName>
    <label>NYPD Freezer Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>A2</fullName>
            </value>
            <value>
                <fullName>A3</fullName>
            </value>
            <value>
                <fullName>A4</fullName>
            </value>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>B3</fullName>
            </value>
            <value>
                <fullName>B4</fullName>
            </value>
            <value>
                <fullName>C1</fullName>
            </value>
            <value>
                <fullName>C2</fullName>
            </value>
            <value>
                <fullName>C3</fullName>
            </value>
            <value>
                <fullName>C4</fullName>
            </value>
            <value>
                <fullName>D1</fullName>
            </value>
            <value>
                <fullName>D2</fullName>
            </value>
            <value>
                <fullName>D3</fullName>
            </value>
            <value>
                <fullName>E1</fullName>
            </value>
            <value>
                <fullName>E2</fullName>
            </value>
            <value>
                <fullName>E3</fullName>
            </value>
            <value>
                <fullName>E4</fullName>
            </value>
            <value>
                <fullName>F1</fullName>
            </value>
            <value>
                <fullName>F2</fullName>
            </value>
            <value>
                <fullName>F3</fullName>
            </value>
            <value>
                <fullName>F4</fullName>
            </value>
            <value>
                <fullName>G1</fullName>
            </value>
            <value>
                <fullName>G2</fullName>
            </value>
            <value>
                <fullName>G3</fullName>
            </value>
            <value>
                <fullName>G4</fullName>
            </value>
            <value>
                <fullName>Floor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>