force-app/main/default/objects/Facility_Outcome__c/fields/Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Point of Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Facilities/Outcomes</relationshipLabel>
    <relationshipName>Facilities_Outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>