force-app/main/default/objects/Facility_Outcome__c/fields/Previous_Facility_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Previous_Facility_Outcome__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Facility/Outcome</label>
    <referenceTo>Facility_Outcome__c</referenceTo>
    <relationshipLabel>Facilities/Outcomes</relationshipLabel>
    <relationshipName>Facilities_Outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>